# qcom-audio

./: alsa-intf.pc.in  configure.ac
audio-native/qdsp5/: aactest.c  adpcmtest.c  amrnbtest.c  amrwbtest.c  audiotest.c  audiotest_cases.h  audiotest_def.h  devctltest.c  fm_test.c  ion_alloc.c  ion_alloc.h  lpatest.c  mp3test.c  mvstest.c  pcmtest.c  qcptest.c  sbctest.c  wmaprotest.c  wmatest.c
audio-native/qdsp6/: atutest.c  audiotest.c
legacy/libalsa-intf/: alsa_audio.h  alsa_pcm.c
libalsa-intf/: Android.mk  Makefile.am  alsa_audio.h  alsa_mixer.c  alsa_pcm.c  alsa_ucm.c  alsa_ucm.h  alsaucm_test.c  aplay.c  arec.c  msm8960_use_cases.h
libalsa-intf/snd_soc_msm/: DL_REC  DL_REC_2x  DL_REC_2x_Fusion3  DL_REC_Sitar  FM_A2DP_REC  FM_A2DP_REC_2x  FM_A2DP_REC_2x_Fusion3  FM_A2DP_REC_Sitar  FM_Digital_Radio  FM_Digital_Radio_2x  FM_Digital_Radio_2x_Fusion3  FM_Digital_Radio_Sitar  FM_REC  FM_REC_2x  FM_REC_2x_Fusion3  FM_REC_Sitar  HiFi  HiFi2  HiFi2_2x  HiFi_2x  HiFi_2x_Fusion3  HiFi_Low_Power  HiFi_Low_Power_2x  HiFi_Low_Power_2x_Fusion3  HiFi_Low_Power_Sitar  HiFi_Rec  HiFi_Rec_2x  HiFi_Rec_2x_Fusion3  HiFi_Rec_Sitar  HiFi_Sitar  HiFi_Tunnel  HiFi_Tunnel_2x  Incall_REC_Fusion3  UL_DL_REC  UL_DL_REC_2x  UL_DL_REC_2x_Fusion3  UL_DL_REC_Sitar  Voice_Call  Voice_Call_2x  Voice_Call_2x_Fusion3  (+12 more)
